# final_project_yatsenko_wachter

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: refs.bib  replication_ppr.tex  replication_ppr_pres.tex  task_paper.py
src/replication_ppr/: __init__.py
src/replication_ppr/analysis/: CIA_data.py  WTO_data.py  calculating_distance.py  regressions.R  regressions.py  tab1_models.r  tab2_models.r  tab3_models.r  tab4_models.r  tab5_models.r  tab5_models_excl_JPN.r  tab6_models.r  tab8_models.r  task_analysis.py  task_regressions.py  task_regressions_created_data.py  task_regressions_original_data.py  wb_data.py
src/replication_ppr/data/: Countries_member_WTO.csv  Countries_member_WTO.xls  GATT.csv  GATT.xlsx  WTO_members.csv  WTO_members.xlsx  cia_factbook.csv  coordinates.csv  countries_list.csv  cpi_urban_consumers.csv  currency.csv  data-XHzgJ.csv  least_developed.csv  pwt56.csv
src/replication_ppr/data_management/: __init__.py  add_iso3.py  calculating_distance.py  cia_factbook.py  clean_data.py  cpi.py  distance_calculation.py  dot.py  final_dataset.py  original_data.py  original_data_paper.py  preparation_original_data.py  rta.py  task_cia_factbook.py  task_data_management.py  (+3 more)
tests/analysis/: check_tab_1_1.r  task_check_same_results.py  test_model.py  test_predict.py
tests/data_management/: test_clean_data.py  test_data_frames.py  test_data_management.py
tests/dependencies/: test_dependencies.py
(+12 files in other folders)
