[metadata]
name = replication_ppr
description = Replication Paper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhwachter/replication_ppr
author = Anzhelika Yatsenko, Marcel Harald Wachter
author_email = marcel.wachter@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/mhwachter/replication_ppr
    Documentation = https://github.com/mhwachter/replication_ppr
    Github = https://github.com/mhwachter/replication_ppr
    Tracker = https://github.com/mhwachter/replication_ppr/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/replication_ppr/_version.py
